# Habit-tracking-bot

./: Dockerfile  alembic.ini  docker-compose.yml  env.template  logger_conf.py  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 318ed12e3097_init.py
celery_client/: connect_db.py  init_celery.py  tasks.py
fastapi_client/api/: main_fast.py
fastapi_client/database/: conection.py  model.py
fastapi_client/routes/: classCRUD.py  routes.py
fastapi_client/schema/: habit.py
telegram/: init_bot.py  main.py
telegram/handlers/: command.py
vk/: init_bot.py  main.py
vk/handlers/: command.py
